rename files, add erlang and update status.yml

--- a/not_done/status.yml
+++ b/not_done/status.yml
@@ -1,5 +1,7 @@
 In progess:
     fantom?
+    erlang
+
 Not feasible (yet):
     porth
         (language needs to be further along/have documentation to be able to work effectively)
