add a couple feasible languages

--- a/not_done/status.yml
+++ b/not_done/status.yml
@@ -49,3 +49,7 @@ Not Started:
     gleam https://gleam.run/
     koka (also functional) https://koka-lang.github.io/koka/doc/index.html
     grain (also functional) https://grain-lang.org/
+
+
+    solidity
+    verilog
