add resources section

--- a/not_done/status.yml
+++ b/not_done/status.yml
@@ -1,5 +1,7 @@
+Resources:
+    https://rosettacode.org/wiki/User_input/Text
+
 In progess:
-    use https://rosettacode.org/wiki/User_input/Text
     erlang
 
 Not feasible (yet):
